app/assets/stylesheets/welcome.css.scss
// Place all the styles related to the welcome controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.bg{
  min-height: 100%;
  min-width: 1024px;
  width: 100%;
  height: auto;
  position: fixed;
  top: 0;
  left: 0;
}

.whiteframeCover md-whiteframe {
  background:rgba(255,255,255,0.5);
  margin: 20px;
  padding: 20px;
  z-index: 1;
  vertical-align: middle;
}

.whiteframeCover{
  margin: auto;
  height: 100%;
}

